--- a/webapp_project/projects/templates/projects/project_list.html
+++ b/webapp_project/projects/templates/projects/project_list.html
@@ -4,7 +4,10 @@
 
 {% block content %}
 <div class="container mt-5">
-    <a href="{% url 'project_add' %}" class="btn btn-primary mb-3">Add New Project</a> 
+    {% if user.is_authenticated %} 
+        <a href="{% url 'project_add' %}" class="btn btn-primary mb-3">Add New Project</a> 
+    {% endif %} 
+    
     <h2 class="mb-4">Projects List</h2>
     <div class="row">
         {% for project in projects %}
