--- a/webapp_project/templates/base.html
+++ b/webapp_project/templates/base.html
@@ -22,7 +22,18 @@
                     <li class="nav-item"><a class="nav-link" href="/projects/">Projects</a></li>
                     <li class="nav-item"><a class="nav-link" href="/admin/">Admin</a></li>
                     {% if user.is_authenticated %}
-                        <li class="nav-item"><a class="nav-link" href="{% url 'logout' %}">Logout</a></li>
+                 
+
+                    <li class="nav-item">
+                        <form action="{% url 'logout' %}" method="post" class="d-inline">
+                            {% csrf_token %}
+                            <button type="submit" class="nav-link btn btn-link" style="border: none; background: none; padding: 5; cursor: pointer;">
+                                Logout
+                            </button>
+                        </form>
+                    </li>
+                
+                    
                     {% else %}
                         <li class="nav-item"><a class="nav-link" href="{% url 'login' %}">Login</a></li>
                         <li class="nav-item"><a class="nav-link" href="{% url 'register' %}">Register</a></li>
