--- a/webapp_project/inbox/templates/messages/messages.html
+++ b/webapp_project/inbox/templates/messages/messages.html
@@ -1,6 +1,34 @@
 {% extends 'base.html' %}
 
+
+
+{% block title %}Messages{% endblock %}
+
 {% block content %}
-    <h2>Messages Inbox</h2>
+<div class="container mt-5">
+    
+    
+    <h2 class="mb-4">Messages Inbox</h2>
+    <div class="row">
+        {% for message in messages %}
+            <div class="col-md-4">
+                <div class="card mb-3 shadow-sm">
+                    <div class="card-body">
+                        <h5 class="card-title">{{ message. }}</h5>
+                        <img src="{{ project.image.url }}" class="card-img-top img-fluid" alt="{{ project.title }}">
+                        <p class="card-text">{{ project.description|truncatewords:20 }}</p>
+                        <a href="{% url 'project_detail' project.pk %}" class="btn btn-primary">View Details</a>
+
+                    </div>
+                   
+                </div>
+            </div>
+        {% empty %}
+            <p>No projects available.</p>
+        {% endfor %}
+    </div>
+</div>
+{% endblock %}
+
     <p>This is where messages will appear in the future.</p>
 {% endblock %}
